--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-red-contrib-oled",
-  "version": "0.2.3",
+  "name": "@hendrikroth/node-red-contrib-oled",
+  "version": "0.2.4",
   "description": "Node-Red node for controlling OLED displays",
   "main": "index.js",
   "scripts": {},
@@ -42,5 +42,9 @@
       "name": "waterbrain",
       "email": "waterbrain@pelaire.com"
     }
-    ]
+    ],
+  "repository":"https://github.com/HendrikRoth/node-red-contrib-oled.git",
+  "publishConfig": {
+    "registry": "https//npm.pkg.gitub.com"
+  }
 }
