--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "readmeFilename": "README.md",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HendrikRoth/node-red-contrib-oled.git"
+    "url": "https://github.com/HendrikRoth/node-red-contrib-oled.git"
   },
   "keywords": [
     "node-red",
@@ -43,7 +43,6 @@
       "email": "waterbrain@pelaire.com"
     }
     ],
-  "repository":"https://github.com/HendrikRoth/node-red-contrib-oled.git",
   "publishConfig": {
     "registry": "https//npm.pkg.gitub.com"
   }
