--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "red-contrib-oled",
+  "name": "node-red-contrib-oled",
   "version": "1.0.4",
   "description": "Node-Red node for controlling OLED displays",
   "main": "index.js",
