--- a/package.json
+++ b/package.json
@@ -32,8 +32,14 @@
       "oled": "oled.js"
     }
   },
+  "engines": {
+    "node": ">=12.0.0"
+  },
   "maintainers": [
-    "waterbrain <waterbrain@pelaire.com>"
+    {
+    "name": "Antonio Maza",
+    "email": "waterbrain@pelaire.com"
+  }
   ],
   "directories": {
     "example": "examples"
