--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-contrib-oled",
-  "version": "1.0.5",
-  "description": "Node-Red node for controlling OLED displays",
+  "version": "1.1.0",
+  "description": "Node-Red node for controlling OLED displays with SSD1306 and SH1106 drivers",
   "main": "index.js",
   "scripts": {},
   "keywords": [
@@ -10,9 +10,9 @@
     "ADS1x15 "
   ],
   "engines": {
-    "node": ">=12"
+    "node": ">=12.0.0"
   },
-  "author": "Hendrik Roth <hi@hendrikroth.com>",
+  "author": "Hendrik Roth <hi@hendrikroth.com>, Abdul Hadi Fikri",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/HendrikRoth/node-red-contrib-oled/issues"
@@ -21,9 +21,9 @@
   "dependencies": {
     "i2c-bus": "^5.2.2",
     "oled-font-5x7": "^1.0.3",
-    "oled-i2c-bus": "^1.0.12",
-    "pngparse": "^2.0.1",
+    "oled-rpi-i2c-bus": "^1.1.0",
     "pngjs": "^6.0.0",
+    "pngparse": "^2.0.1",
     "time-events-manager": "^0.1.1"
   },
   "node-red": {
@@ -32,14 +32,11 @@
       "oled": "oled.js"
     }
   },
-  "engines": {
-    "node": ">=12.0.0"
-  },
   "maintainers": [
     {
-    "name": "Antonio Maza",
-    "email": "waterbrain@pelaire.com"
-  }
+      "name": "Antonio Maza",
+      "email": "waterbrain@pelaire.com"
+    }
   ],
   "directories": {
     "example": "examples"
