--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "engines": {
     "node": ">=12.0.0"
   },
-  "author": "Hendrik Roth <hi@hendrikroth.com>, Abdul Hadi Fikri",
+  "author": "Hendrik Roth <hi@hendrikroth.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/hadifikri/node-red-contrib-oled-i2c/issues"
@@ -36,6 +36,9 @@
     {
       "name": "Antonio Maza",
       "email": "waterbrain@pelaire.com"
+    },{
+      "name": "Abdul Hadi Fikri",
+      "email": "hadifikri@gmail.com"
     }
   ],
   "directories": {
@@ -43,6 +46,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HendrikRoth/node-red-contrib-oled.git"
+    "url": "git+https://github.com/hadifikri/node-red-contrib-oled-i2c.git"
   }
 }
