--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-red-contrib-oled-i2c",
-  "version": "1.1.3",
+  "name": "node-red-contrib-oled",
+  "version": "1.1.0",
   "description": "Node-Red node for controlling OLED displays with SSD1306 and SH1106 drivers",
   "main": "index.js",
   "scripts": {},
@@ -15,9 +15,9 @@
   "author": "Hendrik Roth <hi@hendrikroth.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hadifikri/node-red-contrib-oled-i2c/issues"
+    "url": "https://github.com/HendrikRoth/node-red-contrib-oled/issues"
   },
-  "homepage": "https://github.com/hadifikri/node-red-contrib-oled-i2c",
+  "homepage": "https://github.com/HendrikRoth/node-red-contrib-oled#readme",
   "dependencies": {
     "i2c-bus": "^5.2.2",
     "oled-font-pack": "^1.0.1",
@@ -47,6 +47,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hadifikri/node-red-contrib-oled-i2c.git"
+    "url": "git+https://github.com/HendrikRoth/node-red-contrib-oled.git"
   }
 }
